# todo_drf_example

./: README.md  docker-compose-base.yml  docker-compose-development.yml  production_db.sqlite3  pyproject.toml
apps/core/: models.py  test.py
apps/todos/: filters.py  models.py  serializers.py  views.py
apps/todos/migrations/: 0001_initial.py
apps/todos/tests/: factories.py  test_views.py
apps/users/: apps.py
apps/users/tests/: factories.py  test_views.py
config/: urls.py
config/settings/: base.py  development.py  production.py
docker/base/django/: Dockerfile
docker/production/django/: start.sh
envs/base/: django
envs/production/: django
sh/: build.sh  development_up.sh
